# kuka_robot_descriptions

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  after_build_hook.sh
kuka_agilus_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_agilus_support/config/: kr10_r1100_2_joint_limits.yaml  kr10_r1100_3_joint_limits.yaml  kr10_r900_2_joint_limits.yaml  kr13_r900_3_joint_limits.yaml  kr16_r1100_3_joint_limits.yaml  kr4_r600_joint_limits.yaml  kr6_r700_2_joint_limits.yaml  kr6_r700_sixx_joint_limits.yaml  kr6_r900_2_joint_limits.yaml  kr6_r900_sixx_joint_limits.yaml  kr7_r900_3_joint_limits.yaml
kuka_agilus_support/launch/: test_kr10_r1100_2.launch.py  test_kr10_r1100_3.launch.py  test_kr10_r900_2.launch.py  test_kr10r1100-2.launch.py  test_kr10r1100_2.launch.py  test_kr13_r900_3.launch.py  test_kr16_r1100_3.launch.py  test_kr4r600.launch.py  test_kr6_r700_2.launch.py  test_kr6_r700_sixx.launch.py  test_kr6_r900-sixx.launch.py  test_kr6_r900_2.launch.py  test_kr6_r900_sixx.launch.py  test_kr6r900sixx.launch.py  test_kr7_r900_3.launch.py
kuka_agilus_support/test/: test_kr_agilus.py
kuka_agilus_support/urdf/: kr10_r1100-2.urdf.xacro  kr10_r1100-2_macro.xacro  kr10_r1100_2.urdf.xacro  kr10_r1100_2_macro.xacro  kr10_r1100_3.urdf.xacro  kr10_r1100_3_macro.xacro  kr10_r900_2.urdf.xacro  kr10_r900_2_macro.xacro  kr13_r900_3.urdf.xacro  kr13_r900_3_macro.xacro  kr16_r1100_3.urdf.xacro  kr16_r1100_3_macro.xacro  kr4_r600.urdf.xacro  kr4_r600_macro.xacro  kr6_r700-sixx.urdf.xacro  kr6_r700-sixx_macro.xacro  kr6_r700_2.urdf.xacro  kr6_r700_2_macro.xacro  kr6_r700_sixx.urdf.xacro  kr6_r700_sixx_macro.xacro  kr6_r900-sixx.urdf.xacro  kr6_r900-sixx_macro.xacro  kr6_r900_2.urdf.xacro  kr6_r900_2_macro.xacro  kr6_r900_sixx.urdf.xacro  kr6_r900_sixx.xacro  kr6_r900_sixx_macro.xacro  kr7_r900_3.urdf.xacro  kr7_r900_3_macro.xacro  kr_agilus_gpio_config.xacro  kr_agilus_ros2_control.xacro  kr_agilus_ros2_control_macro.xacro  kr_agilus_transmission.xacro
kuka_cybertech_moveit_config/: CMakeLists.txt  package.xml
kuka_cybertech_moveit_config/config/: kinematics.yaml
kuka_cybertech_moveit_config/srdf/: cybertech_arm.macro.xacro  kr16_r2010-2_arm.srdf.xacro
kuka_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_gazebo/config/: bridge_config.yaml
kuka_gazebo/gazebo/: kuka_gazebo.xacro
kuka_gazebo/launch/: gazebo.launch.py  gazebo_startup.launch.py  run_gazebo_tests.py  test_gazebo.launch.py
kuka_gazebo/src/: gazebo_lbr_iisy3_r760_moveit_example.cpp
kuka_gazebo/test/: gazebo_activation_test.py  gazebo_support_test.py  gazebo_test.txt  gazebo_test_keep_alive.cpp  run_gazebo_tests.py  test_gazebo_robot_support.py
kuka_gazebo/world/: box.sdf  empty_world.sdf
kuka_iisy_support/: CMakeLists.txt  package.xml
kuka_iisy_support/config/: urdf_planning_scene.rviz
kuka_iisy_support/launch/: rviz_iisy.launch.py  rviz_simtime.launch.py  test_lbr3r760.launch.py  urdf.rviz  urdf_wo_planning_scene.rviz
kuka_iisy_support/meshes/: link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
kuka_iisy_support/urdf/: iisy.ros2_control.urdf.xacro  iisy.srdf  iisy.urdf  iisy.urdf.xacro  iisy_arm.srdf.xacro  iisy_arm.xacro  iisy_bad.urdf  iisy_macro.xacro  iisy_ros2_control.xacro  iisy_transmission.xacro
kuka_kl_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_kl_support/config/: kl100_2_joint_limits.yaml  kl100_joint_limits.yaml
kuka_kl_support/srdf/: kl_macro.xacro
kuka_kl_support/urdf/: kl100_2_macro.xacro  kl100_macro.xacro  kl_ros2_control_macro.xacro
kuka_kr_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_kr_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  urdf_planning_scene.rviz
kuka_kr_moveit_config/launch/: moveit_planning_fake_hardware.launch.py  moveit_planning_gazebo.launch.py  moveit_server.launch.py
kuka_kr_moveit_config/srdf/: kr_arm.srdf.xacro  kr_arm_macro.xacro
kuka_lbr_iisy_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_lbr_iisy_moveit_config/config/: chomp_planning.yaml  kinematics.yaml  lbr_controllers.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  urdf_planning_scene.rviz
kuka_lbr_iisy_moveit_config/launch/: gazebo.launch.py  moveit_planning_fake_hardware.launch.py  moveit_planning_gazebo.launch.py  moveit_server.launch.py
kuka_lbr_iisy_moveit_config/srdf/: lbr_iisy11_r1300_arm.srdf.xacro  lbr_iisy15_r930_arm.srdf.xacro  lbr_iisy3_r760_arm.srdf.xacro  lbr_iisy_arm.macro.xacro  lbr_iisy_arm.srdf.xacro  lbr_iisy_arm.xacro
kuka_lbr_iisy_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_lbr_iisy_support/config/: lbr_iisy11_r1300_joint_limits.yaml  lbr_iisy15_r930_joint_limits.yaml  lbr_iisy3_r760_joint_limits.yaml  simple_urdf.rviz
kuka_lbr_iisy_support/launch/: test_lbr11r1300.launch.py  test_lbr3r760.launch.py  test_lbr_iisy11_r1300.launch.py  test_lbr_iisy15_r930.launch.py  test_lbr_iisy3_r760.launch.py
kuka_lbr_iisy_support/test/: test_lbr_iisy.py
kuka_lbr_iisy_support/urdf/: gazebo_control_macro.xacro  gazebo_plugin_macro.xacro  gpio_config.xacro  lbr_iisy11_r1300.urdf.xacro  lbr_iisy11_r1300_gazebo.urdf.xacro  lbr_iisy11_r1300_gazebo_macro.xacro  lbr_iisy11_r1300_macro.xacro  lbr_iisy15_r930.urdf.xacro  lbr_iisy15_r930_gazebo.urdf.xacro  lbr_iisy15_r930_gazebo_macro.xacro  lbr_iisy15_r930_macro.xacro  lbr_iisy3_r760.urdf.xacro  lbr_iisy3_r760_gazebo.urdf.xacro  lbr_iisy3_r760_gazebo_macro.xacro  lbr_iisy3_r760_macro.xacro  lbr_iisy_ros2_control.xacro  lbr_iisy_ros2_control_macro.xacro  lbr_iisy_rsi_ros2_control_macro.xacro  (+1 more)
kuka_lbr_iiwa_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_lbr_iiwa_support/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_mock_hardware_interface/: CHANGELOG.rst  CMakeLists.txt  hardware_interface.xml  package.xml
kuka_quantec_support/: CHANGELOG.rst  CMakeLists.txt  kuka_quantec_support.dsv  package.xml
kuka_resources/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_robot_descriptions/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+930 files in other folders)
