<?xml version="1.0"?>
<package format="3">
  <name>kuka_agilus_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 6 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA agilus manipulators. This currently includes the R700 sixx,
      the R900 sixx and the R1100-2.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 6 R700 sixx - Default</li>
      <li>KR 6 R900 sixx - Default</li>
      <li>KR 6 R1100-2 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities for sixx models are based on the information
      in the <em>KUKA Roboter GmbH - KR AGILUS sixx - With W and C Variants -
      Specification</em> version <em>Spez KR AGILUS sixx V12, 26.03.2015</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author>Brett Hemes (3M)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="svastits1@gmail.com">Áron Svastits</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>launch_ros</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
