<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_gazebo</name>
  <version>1.0.0</version>
  <description>A helper package for Gazebo support with KUKA robots</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <!-- Test dependencies -->
  <depend>ros2lifecycle</depend>
  <depend>launch_testing_ament_cmake</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>
  <depend>python3-pytest</depend>
  <depend>demo_nodes_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
