<?xml version="1.0"?>
<package format="3">
  <name>kuka_kl_support</name>
  <version>1.0.0</version>
  <description>Robot models for the KUKA KL family.</description>
  <author email="kovacsge.work@gmail.com">Gergely Kovacs</author>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
