<?xml version="1.0"?>
<package format="3">
  <name>kuka_kr_moveit_config</name>
  <version>0.9.0</version>
  <description>Package containing moveit configuration for KUKA KR robots</description>
  <author>Aron Svastits</author>
  <license>Apache 2.0</license>
  <maintainer email="svastits1@gmail.com"> Aron Svastits</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
