<?xml version="1.0"?>
<package format="3">
  <name>kuka_lbr_iisy_moveit_config</name>
  <version>1.0.0</version>
  <description>Package containing moveit configurations for KUKA LBR iisy family</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
