<?xml version="1.0"?>
<package format="3">
  <name>kuka_lbr_iiwa_moveit_config</name>
  <version>0.9.0</version>
  <description>Package containing moveit configurations for KUKA LBR iiwa family</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
