<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_lbr_iiwa_support</name>
  <version>0.0.0</version>
  <description>ROS2 support package for the KUKA LBR iiwa</description>
  <maintainer email="svastits1@gmail.com">Áron Svastits</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>launch_ros</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
