<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_lbr_iiwa_support</name>
  <version>1.0.0</version>
  <description>ROS2 support package for the KUKA LBR iiwa</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
