<?xml version="1.0"?>
<package format="3">
  <name>kuka_quantec_support</name>
  <version>0.0.1</version>
  <description>Robot models for the KUKA quantec family.</description>
  <author>Áron Svastits</author>
  <maintainer email="svastits1@gmail.com">Áron Svastits</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>launch_ros</depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
