<?xml version="1.0"?>
<package format="2">
  <name>kuka_robot_descriptions</name>
  <version>0.0.1</version>
  <description>Robot descriptions for KUKA robots</description>
  <author>Áron Svastits</author>
  <maintainer email="svastits1@gmail.com">Áron Svastits</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/kroshu/kuka_robot_descriptions/issues</url>
  <url type="repository">https://github.com/kroshu/kuka_robot_descriptions</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kuka_agilus_support</exec_depend>
  <exec_depend>kuka_cybertech_support</exec_depend>
  <exec_depend>kuka_kr_moveit_config</exec_depend>
  <exec_depend>kuka_lbr_iisy_moveit_config</exec_depend>
  <exec_depend>kuka_lbr_iisy_support</exec_depend>
  <exec_depend>kuka_lbr_iiwa_support</exec_depend>
  <exec_depend>kuka_quantec_support</exec_depend>
  <exec_depend>kuka_resources</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
